--- a/src/main/java/PacoteInterfaceVisual/PaginaPagar.form
+++ b/src/main/java/PacoteInterfaceVisual/PaginaPagar.form
@@ -74,8 +74,9 @@
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="AlterarEmailTitulo" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Group type="102" alignment="0" attributes="0">
-                                          <Component id="CampoInserirCodigoBoleto" min="-2" pref="220" max="-2" attributes="0"/>
-                                          <EmptySpace max="-2" attributes="0"/>
+                                          <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
+                                          <Component id="CampoInserirCodigoBoletoFORMATADO" min="-2" pref="206" max="-2" attributes="0"/>
+                                          <EmptySpace type="separate" max="-2" attributes="0"/>
                                           <Component id="BotaoPagarViaBoleto" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                       <Group type="102" alignment="0" attributes="0">
@@ -83,13 +84,9 @@
                                           <EmptySpace type="separate" max="-2" attributes="0"/>
                                           <Component id="BotaoGerarBoletoDeposito" min="-2" max="-2" attributes="0"/>
                                       </Group>
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <Component id="PagamentoBoletoTitulo" min="-2" max="-2" attributes="0"/>
-                                          <EmptySpace min="-2" pref="63" max="-2" attributes="0"/>
-                                          <Component id="CampoInserirCodigoBoletoFORMATADO" min="-2" pref="206" max="-2" attributes="0"/>
-                                      </Group>
+                                      <Component id="PagamentoBoletoTitulo" alignment="0" min="-2" max="-2" attributes="0"/>
                                   </Group>
-                                  <EmptySpace min="0" pref="147" max="32767" attributes="0"/>
+                                  <EmptySpace min="0" pref="230" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -116,26 +113,17 @@
                   </Group>
                   <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
                   <Component id="AlterarEmailTitulo" min="-2" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" attributes="0">
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="CampoInserirQuantiaDeposito" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
-                              <Component id="BotaoGerarBoletoDeposito" alignment="3" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace pref="112" max="32767" attributes="0"/>
-                          <Component id="PagamentoBoletoTitulo" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="1" attributes="0">
-                          <EmptySpace max="32767" attributes="0"/>
-                          <Component id="CampoInserirCodigoBoletoFORMATADO" min="-2" pref="36" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
-                      </Group>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="CampoInserirQuantiaDeposito" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
+                      <Component id="BotaoGerarBoletoDeposito" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
+                  <EmptySpace pref="110" max="32767" attributes="0"/>
+                  <Component id="PagamentoBoletoTitulo" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="BotaoPagarViaBoleto" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="CampoInserirCodigoBoleto" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
+                      <Component id="CampoInserirCodigoBoletoFORMATADO" alignment="3" min="-2" pref="36" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
                   <Component id="BotaoVoltar" min="-2" pref="40" max="-2" attributes="0"/>
@@ -294,22 +282,6 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BotaoVoltarActionPerformed"/>
-          </Events>
-        </Component>
-        <Component class="javax.swing.JTextField" name="CampoInserirCodigoBoleto">
-          <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Segoe UI" size="10" style="0"/>
-            </Property>
-            <Property name="text" type="java.lang.String" value="inserir codigo boleto"/>
-            <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-              <Border info="org.netbeans.modules.form.compat2.border.SoftBevelBorderInfo">
-                <BevelBorder/>
-              </Border>
-            </Property>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CampoInserirCodigoBoletoActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JFormattedTextField" name="CampoInserirCodigoBoletoFORMATADO">
