--- a/src/main/java/PacoteInterfaceVisual/PaginaPagar.form
+++ b/src/main/java/PacoteInterfaceVisual/PaginaPagar.form
@@ -287,7 +287,7 @@
         <Component class="javax.swing.JFormattedTextField" name="CampoInserirCodigoBoletoFORMATADO">
           <Properties>
             <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor" preCode="try {" postCode="} catch (java.text.ParseException ex) {&#xa;ex.printStackTrace();&#xa;}">
-              <Format format="#############################################" subtype="-1" type="5"/>
+              <Format format="###############################################" subtype="-1" type="5"/>
             </Property>
             <Property name="toolTipText" type="java.lang.String" value="inserir codigo boleto"/>
           </Properties>
