Working on adjusting PasswordFields, Adjusting the PaginaCriarContaSenha

--- a/src/main/java/PacoteInterfaceVisual/PaginaCriarContaSenha.form
+++ b/src/main/java/PacoteInterfaceVisual/PaginaCriarContaSenha.form
@@ -57,13 +57,13 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" attributes="0">
+              <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                      <Component id="CampoConfirmarSenha" pref="220" max="32767" attributes="0"/>
                       <Component id="DigiteSuaSenha" alignment="0" min="-2" pref="174" max="-2" attributes="0"/>
-                      <Component id="CampoDigitarSenha" alignment="0" min="-2" pref="220" max="-2" attributes="0"/>
-                      <Component id="CampoConfirmarSenha" alignment="0" min="-2" pref="220" max="-2" attributes="0"/>
                       <Component id="ConfirmeSuaSenha" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="CampoDigitarSenha" alignment="0" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace pref="140" max="32767" attributes="0"/>
               </Group>
@@ -119,19 +119,6 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="DigiteSuaSenhaActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JTextField" name="CampoDigitarSenha">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="********"/>
-            <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-              <Border info="org.netbeans.modules.form.compat2.border.SoftBevelBorderInfo">
-                <BevelBorder/>
-              </Border>
-            </Property>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CampoDigitarSenhaActionPerformed"/>
-          </Events>
-        </Component>
         <Component class="javax.swing.JButton" name="BotaoCriarConta">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
@@ -169,18 +156,15 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ConfirmeSuaSenhaActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JTextField" name="CampoConfirmarSenha">
+        <Component class="javax.swing.JPasswordField" name="CampoDigitarSenha">
           <Properties>
-            <Property name="text" type="java.lang.String" value="********"/>
-            <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-              <Border info="org.netbeans.modules.form.compat2.border.SoftBevelBorderInfo">
-                <BevelBorder/>
-              </Border>
-            </Property>
+            <Property name="text" type="java.lang.String" value="jPasswordField1"/>
           </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CampoConfirmarSenhaActionPerformed"/>
-          </Events>
+        </Component>
+        <Component class="javax.swing.JPasswordField" name="CampoConfirmarSenha">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="jPasswordField1"/>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
