--- a/src/main/java/PacoteInterfaceVisual/PaginaPedirSenhaLogin.form
+++ b/src/main/java/PacoteInterfaceVisual/PaginaPedirSenhaLogin.form
@@ -57,7 +57,7 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
+              <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="BotaoEsqueciSenha" min="-2" pref="127" max="-2" attributes="0"/>
@@ -82,7 +82,7 @@
                   <Component id="InformeSuaSenha" min="-2" pref="34" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="CampoInserirSenha" min="-2" pref="34" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="BotaoEsqueciSenha" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="147" max="-2" attributes="0"/>
               </Group>
@@ -114,19 +114,6 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="InformeSuaSenhaActionPerformed"/>
-          </Events>
-        </Component>
-        <Component class="javax.swing.JTextField" name="CampoInserirSenha">
-          <Properties>
-            <Property name="text" type="java.lang.String" value=" **********"/>
-            <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-              <Border info="org.netbeans.modules.form.compat2.border.SoftBevelBorderInfo">
-                <BevelBorder/>
-              </Border>
-            </Property>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CampoInserirSenhaActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JButton" name="BotaoEsqueciSenha">
@@ -164,6 +151,8 @@
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BotaoEntrarSenhaActionPerformed"/>
           </Events>
+        </Component>
+        <Component class="javax.swing.JPasswordField" name="CampoInserirSenha">
         </Component>
       </SubComponents>
     </Container>
