--- a/src/main/java/PacoteInterfaceVisual/PaginaRedefinirSenha.form
+++ b/src/main/java/PacoteInterfaceVisual/PaginaRedefinirSenha.form
@@ -60,14 +60,15 @@
               <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="CampoInserirNovaSenha" alignment="0" pref="220" max="32767" attributes="0"/>
-                          <Component id="InformeSuaSenha" alignment="0" max="32767" attributes="0"/>
-                      </Group>
                       <Component id="ConfirmarNovaSenha" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Group type="103" alignment="0" groupAlignment="1" attributes="0">
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="-2" pref="105" max="-2" attributes="0"/>
                           <Component id="BotaoConfirmar" min="-2" max="-2" attributes="0"/>
-                          <Component id="CampoInserirConfirmacaoSenha" min="-2" pref="220" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                          <Component id="CampoInserirConfirmacaoSenha" alignment="0" max="32767" attributes="0"/>
+                          <Component id="CampoInserirNovaSenha" alignment="0" max="32767" attributes="0"/>
+                          <Component id="InformeSuaSenha" alignment="0" pref="220" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace pref="113" max="32767" attributes="0"/>
@@ -77,11 +78,11 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace pref="139" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
                   <Component id="InformeSuaSenha" min="-2" pref="34" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="CampoInserirNovaSenha" min="-2" pref="34" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="ConfirmarNovaSenha" min="-2" pref="34" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="CampoInserirConfirmacaoSenha" min="-2" pref="34" max="-2" attributes="0"/>
@@ -110,19 +111,6 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="InformeSuaSenhaActionPerformed"/>
-          </Events>
-        </Component>
-        <Component class="javax.swing.JTextField" name="CampoInserirNovaSenha">
-          <Properties>
-            <Property name="text" type="java.lang.String" value=" **********"/>
-            <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-              <Border info="org.netbeans.modules.form.compat2.border.SoftBevelBorderInfo">
-                <BevelBorder/>
-              </Border>
-            </Property>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CampoInserirNovaSenhaActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JButton" name="BotaoConfirmar">
@@ -162,18 +150,9 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ConfirmarNovaSenhaActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JTextField" name="CampoInserirConfirmacaoSenha">
-          <Properties>
-            <Property name="text" type="java.lang.String" value=" **********"/>
-            <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-              <Border info="org.netbeans.modules.form.compat2.border.SoftBevelBorderInfo">
-                <BevelBorder/>
-              </Border>
-            </Property>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CampoInserirConfirmacaoSenhaActionPerformed"/>
-          </Events>
+        <Component class="javax.swing.JPasswordField" name="CampoInserirNovaSenha">
+        </Component>
+        <Component class="javax.swing.JPasswordField" name="CampoInserirConfirmacaoSenha">
         </Component>
       </SubComponents>
     </Container>
